added event listeners to all buttons

--- a/templates/game.html
+++ b/templates/game.html
@@ -3,8 +3,26 @@
 <head>
     <meta charset="UTF-8">
     <title>Memory game</title>
+    <script type="text/javascript" src="static/game.js" async></script>
+    <link rel="stylesheet" href="static/cssfile.css">
+    <link rel="stylesheet"
+          href="https://use.fontawesome.com/releases/v5.0.10/css/all.css"
+          integrity="sha384-+d0P83n9kaQMCwj8F4RJB66tzIwOKmrdb46+porD/OvrJ+37WqIM7UoBtwHO6Nlg"
+          crossorigin="anonymous">
 </head>
 <body>
-
+<div class="board">
+    <table>
+        {% for y in range (y_length) %}
+        <tr>
+            {% for x in range (x_length) %}
+            <td>
+                <button class="card" id={{ (x+1)|string + (y+1)|string }}><i class="fab fa-avianex"></i></button>
+            </td>
+            {% endfor %}
+        </tr>
+        {% endfor %}
+    </table>
+</div>
 </body>
 </html>
