--- a/templates/main_site.html
+++ b/templates/main_site.html
@@ -5,21 +5,19 @@
 </head>
 <body>
 <form action={{ url_for('game') }} method="POST">
-<select required>
+<select id="X" name="X" required>
     <option selected="true"
             value="Please select a number"
-            id="X" name="X"
             disabled="disabled">Please select a number
     </option>
     {% for i in range(1,9) %}
     <option value={{ i }}> {{ i }}</option>
     {% endfor %}
 </select>
-<select required>
+<select id="Y" name="Y" required>
     <option selected="true"
             value="Please select a number"
-            id="Y" name="Y"
-            disabled="disabled">Please select a number
+            disabled="disabled"> Please select a number
     </option>
     {% for i in range(2,9,2) %}
     <option value={{ i }}> {{ i }}</option>
