--- a/static/cssfile.css
+++ b/static/cssfile.css
@@ -1,10 +1,10 @@
 .card {
-    background-color: DodgerBlue; /* Blue background */
-    border: none; /* Remove borders */
-    color: white; /* White text */
-    padding: 12px 16px; /* Some padding */
-    font-size: 32px; /* Set a font size */
-    cursor: pointer; /* Mouse pointer on hover */
+    background-color: DodgerBlue;
+    border: none;
+    color: white;
+    padding: 12px 16px;
+    font-size: 32px;
+    cursor: pointer;
 }
 
 .board {
