--- a/templates/game.html
+++ b/templates/game.html
@@ -12,6 +12,7 @@
 </head>
 <body>
 <div class="board">
+    <h1> Memory game</h1>
     <table>
         {% for y in range (y_length) %}
         <tr>
